--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 [dependencies]
 # If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
 risc0-zkvm = { version = "0.17.0", default-features = false, features = [ "std" ] }
-ttfhe = { path = "../../../ttfhe" }
+ttfhe = { path = "../../ttfhe" }
