--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 methods = { path = "../methods" }
-risc0-zkvm = { version = "0.17.0" }
+risc0-zkvm = { version = "0.19.1" }
 serde = "1.0"
-ttfhe = { path = "../../ttfhe" }
+ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "32bit" }
