--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [workspace]
 
 [dependencies]
-risc0-zkvm = { version = "0.17.0", default-features = false, features = [ "std" ] }
-ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git" }
+risc0-zkvm = { version = "0.19.1", default-features = false, features = [ "std" ] }
+ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "32bit" }
