--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 methods = { path = "../methods" }
 risc0-zkvm = { version = "0.19.1" }
 serde = "1.0"
-ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "32bit" }
+ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "karatsuba" }
