--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bincode = "1.3.3"
 methods = { path = "../methods" }
 risc0-zkvm = { version = "0.19.1" }
 serde = "1.0"
-ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "32bit" }
+ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "karatsuba" }
