--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [workspace]
 
 [dependencies]
+include_bytes_aligned = "0.1.2"
 risc0-zkvm = { version = "0.19.1", default-features = false, features = [ "std" ] }
-ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "32bit" }
+ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "karatsuba" }
