--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 methods = { path = "../methods" }
-risc0-zkvm = { version = "0.20.1" }
+risc0-zkvm = { version = "^2.2.0" }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
 ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "karatsuba" }
