--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "blind_rotate"
+name = "br"
 version = "0.1.0"
 edition = "2021"
 
 [workspace]
 
 [dependencies]
-risc0-zkvm = { version = "0.20.1", default-features = false, features = [ "std" ] }
+risc0-zkvm = { version = "^2.2.0", default-features = false, features = ['std'] }
 ttfhe = { git = "https://github.com/tremblaythibaultl/ttfhe.git", branch = "karatsuba" }
